<resources>
    <string name="app_name">Motivator</string>

    <string name="action_settings">Settings</string>

    <string name="one">ONE</string>
    <string name="eight">EIGHT</string>
    <string name="five">FIVE</string>
    <string name="four">FOUR</string>
    <string name="nine">NINE</string>
    <string name="seven">SEVEN</string>
    <string name="six">SIX</string>
    <string name="ten">TEN</string>
    <string name="three">THREE</string>
    <string name="two">TWO</string>
    <string name="title_activity_scrollable_tabs">Scrollable Tabs</string>
    <string name="title_activity_simple_tabs">Simple Tabs</string>
    <string name="btn_simple_tabs">Simple Tabs</string>
    <string name="btn_scrollable_tabs">Scrollable Tabs</string>
    <string name="btn_icon_text_tabs">Icon &amp; Text Tabs</string>
    <string name="btn_icon_tabs">Only Icon Tabs</string>
    <string name="btn_pinned_top_tabs">Pinned To Top Tabs</string>
    <string name="title_activity_icon_text_tabs">Icon and Text Tabs</string>
    <string name="title_activity_icon_tabs">Icon Tabs</string>
    <string name="btn_custom_icon_tabs">Custom View Icon &amp; Text</string>
    <string name="title_activity_custom_view_icon_text_tabs">Custom View Icon &amp; Text</string>
    <string name="title_activity_pinned_top_tabs">Pin Top Tabs</string>
    <string name="title_activity_main2">Main2Activity</string>

    <string name="hello_world">Hello world!</string>

    <string name="error_player">There was an error initializing the YouTubePlayer (%1$s)</string>

    <!-- AdMob ad unit IDs -->
    <string name="banner_home_footer">ca-app-pub-2392481904715687/1656743051</string>
    <string name="interstitial_full_screen">cca-app-pub-2392481904715687/9319610653</string>

    <string name="content_authority">com.newtra.android.androidflavors.app</string>
    <string name="profile">Profile</string>
    <string name="profileimage">Profile Image</string>
    <string name="logo">Logo</string>
    <string name="close_button">Close Button</string>
    <string name="textview">TextView</string>
    <string name="_000">000</string>
    <string name="refresh">Refresh</string>
    <string name="title">Title</string>
    <string name="_3_25">3.25</string>
    <string name="description_of_the_book_about_the_subject_and_nture_of_the_book">Description of the book about the subject and nture of the book.</string>
    <string name="_00_00">00:00</string>
    <string name="audioDownloadProgress">Please wait, audio file is downloading</string>
    <string name="youtube">YOU TUBE</string>
    <string name="book">BOOKS</string>
    <string name="audio">AUDIO</string>

    <!-- App name -->
    <string name="app_version_number">1.0</string>
    <string name="menu_settings">Settings</string>

    <string name="cd_repeat">Repeat one or all</string>
    <string name="cd_previous">Skip backwards</string>
    <string name="cd_play">Play and pause</string>
    <string name="cd_next">Skip forwards</string>



</resources>
