<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:id="@+id/child_layout">

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/audioBg">

        <TextView
            android:text="@string/textview"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:id="@+id/textViewName"
            android:layout_weight="1"
            android:gravity="center_vertical"
            android:layout_alignParentRight="true"
            android:layout_alignParentEnd="true"
            android:layout_toRightOf="@+id/btnPlay"
            android:layout_toEndOf="@+id/btnPlay"
            android:layout_alignBottom="@+id/btnPlay" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal"
            android:layout_marginTop="2dp">



            <TextView
                android:id="@+id/songCurrentDurationLabel"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:gravity="start"
                android:text="@string/_3_25"
                android:textColor="#747272"
                android:textStyle="bold"
                android:visibility="gone" />

            <SeekBar
                android:id="@+id/songProgressBar"
                android:layout_width="wrap_content"
                android:layout_height="50dp"
                android:layout_gravity="center"
                android:layout_marginLeft="5dp"
                android:layout_marginRight="5dp"
                android:layout_weight="1"
                android:indeterminate="false"
                android:paddingLeft="6dp"
                android:visibility="invisible"
                android:paddingRight="6dp" />

            <TextView
                android:id="@+id/songTotalDurationLabel"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:gravity="end"
                android:text="@string/_00_00"
                android:textColor="#656262"
                android:textStyle="bold"
                android:visibility="invisible" />
        </LinearLayout>


    </LinearLayout>




</RelativeLayout>